Fix dark mode

--- a/src/app/landing/components/nav/nav.component.scss
+++ b/src/app/landing/components/nav/nav.component.scss
@@ -115,7 +115,7 @@
 }
 
 .title-lang {
-    color: #0E0D0D;
+    color: #111827;
 }
 
 .options .content-option:hover .title-lang {
